--- a/src/main/resources/ventus/rggwheel/retroBoyColor/userInterface/statisticsColor.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyColor/userInterface/statisticsColor.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <Pane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ventus.rggwheel.controllers.color.StatisticsColorController"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="ventus.rggwheel.controllers.color.StatisticsColorController"
       layoutX="370.0" layoutY="192.0" opacity="0.0" prefHeight="712.0" prefWidth="806.0">
     <ImageView fitHeight="478.0" fitWidth="453.0" layoutX="184.0" layoutY="148.0"
                pickOnBounds="true" preserveRatio="true">
