--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/inventoryMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/inventoryMono.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.*?>
-
 <Pane layoutX="372.0" layoutY="192.0" opacity="0.0" prefHeight="712.0" prefWidth="809.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventus.rggwheel.controllers.mono.InventoryMonoController">
     <Label layoutX="179.0" layoutY="101.0" text="Hints" textFill="#214236">
         <font>
