--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
@@ -4,31 +4,27 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ventus.rggwheel.controllers.mono.SplashMonoController"
-            opacity="100.0" prefHeight="647.0" prefWidth="1335.0">
-    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="372.0" layoutY="695.0" prefHeight="218.0"
-           prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#214236">
+
+<AnchorPane opacity="100.0" prefHeight="647.0" prefWidth="1335.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventus.rggwheel.controllers.mono.SplashMonoController">
+    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="372.0" layoutY="695.0" prefHeight="218.0" prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#50793c">
         <font>
-            <Font name="Bit Cell" size="150.0"/>
+            <Font name="Bit Cell" size="150.0" />
         </font>
     </Label>
-    <Label layoutX="375.0" layoutY="741.0" opacity="0.08" prefHeight="241.0" prefWidth="1035.0"
-           text="Code: Ventus34" textFill="#101010">
+    <Label layoutX="375.0" layoutY="741.0" opacity="0.08" prefHeight="241.0" prefWidth="1035.0" text="Code: Ventus34" textFill="#101010">
         <font>
-            <Font name="Bit Cell" size="29.0"/>
+            <Font name="Bit Cell" size="29.0" />
         </font>
     </Label>
-    <Label layoutX="375.0" layoutY="798.0" opacity="0.08" prefHeight="181.0" prefWidth="619.0"
-           text="Layout created by Freepik" textFill="#101010">
+    <Label layoutX="375.0" layoutY="798.0" opacity="0.08" prefHeight="181.0" prefWidth="619.0" text="Layout created by Freepik" textFill="#101010">
         <font>
-            <Font name="Bit Cell" size="29.0"/>
+            <Font name="Bit Cell" size="29.0" />
         </font>
     </Label>
-    <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="367.0" layoutY="188.0"
-               pickOnBounds="true" preserveRatio="true">
-        <Image url="@../graphics/super_wheel_mono.png"/>
+   <Circle fill="#c5bea2" layoutX="771.0" layoutY="491.0" radius="230.0" stroke="BLACK" strokeType="INSIDE" />
+    <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="370.0" layoutY="188.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../graphics/super_wheel_mono.png" />
     </ImageView>
 </AnchorPane>
